--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fa-IR.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fa-IR.resx
@@ -3357,4 +3357,7 @@
   <data name="Unchanged" xml:space="preserve">
     <value>بدون تغییر</value>
   </data>
+  <data name="Finished_word" xml:space="preserve">
+    <value>تمام شد</value>
+  </data>
 </root>
