--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fa.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fa.resx
@@ -3360,4 +3360,7 @@
   <data name="Unchanged" xml:space="preserve">
     <value>بدون تغییر</value>
   </data>
+  <data name="Finished_word" xml:space="preserve">
+    <value>تمام شد</value>
+  </data>
 </root>
