--- a/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
@@ -3357,4 +3357,7 @@
   <data name="Unchanged" xml:space="preserve">
     <value>Óbreytt</value>
   </data>
+  <data name="Finished_word" xml:space="preserve">
+    <value>Lokið</value>
+  </data>
 </root>
