--- a/Installer_Src/Setup DreamWorld/My Project/Resources.pt-BR.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.pt-BR.resx
@@ -3360,4 +3360,7 @@
   <data name="Unchanged" xml:space="preserve">
     <value>Inalterado</value>
   </data>
+  <data name="Finished_word" xml:space="preserve">
+    <value>Concluído</value>
+  </data>
 </root>
