--- a/Installer_Src/Setup DreamWorld/My Project/Resources.zh-Hans-HK.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.zh-Hans-HK.resx
@@ -3357,4 +3357,7 @@
   <data name="Unchanged" xml:space="preserve">
     <value>不变</value>
   </data>
+  <data name="Finished_word" xml:space="preserve">
+    <value>完成 ！</value>
+  </data>
 </root>
