--- a/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
@@ -3363,4 +3363,22 @@
   <data name="Finished_word" xml:space="preserve">
     <value>Hotovo</value>
   </data>
+  <data name="Boot_Time" xml:space="preserve">
+    <value>Doba potřebná ke spuštění</value>
+  </data>
+  <data name="Map_Time" xml:space="preserve">
+    <value>Zavádění mapy TIme</value>
+  </data>
+  <data name="Benchmark" xml:space="preserve">
+    <value>Srovnávací test</value>
+  </data>
+  <data name="AreYouSure" xml:space="preserve">
+    <value>Vypnout mřížku?</value>
+  </data>
+  <data name="Setup_Perl" xml:space="preserve">
+    <value>Nastavení jazyka Perl</value>
+  </data>
+  <data name="ViewVisitorMaps" xml:space="preserve">
+    <value>Zobrazit mapy návštěvníků</value>
+  </data>
 </root>
