allow http or https strings in splash screen

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3356,6 +3356,9 @@
   <data name="Stop_word" xml:space="preserve">
     <value>Stop</value>
   </data>
+  <data name="String1" xml:space="preserve">
+    <value>Boot Time</value>
+  </data>
   <data name="Subject_word" xml:space="preserve">
     <value>Subject</value>
   </data>
