--- a/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
@@ -3384,4 +3384,7 @@
   <data name="UpdateNow" xml:space="preserve">
     <value>Ενημέρωση τώρα</value>
   </data>
+  <data name="String1" xml:space="preserve">
+    <value>Χρόνο εκκίνησης</value>
+  </data>
 </root>
