--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ar-SA.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ar-SA.resx
@@ -3384,4 +3384,7 @@
   <data name="UpdateNow" xml:space="preserve">
     <value>تحديث الان</value>
   </data>
+  <data name="String1" xml:space="preserve">
+    <value>زمن الإقلاع</value>
+  </data>
 </root>
