All files CodeMaid cleanup. There is a codemaid setting in the src so you can be consistent if you use it

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3087,7 +3087,8 @@
     <value>Select</value>
   </data>
   <data name="Send_alert" xml:space="preserve">
-    <value>Send Alert</value>
+    <value>Send Alert to a User</value>
+    <comment>Changed</comment>
   </data>
   <data name="Send_Alert_Message_word" xml:space="preserve">
     <value>Send Alert Message</value>
