--- a/Installer_Src/Setup DreamWorld/My Project/Resources.zh-cn.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.zh-cn.resx
@@ -1879,7 +1879,7 @@
     <value>当我开始了，所以我在离开的MySQL的MySQL正在运行。</value>
   </data>
   <data name="Mysql_Word" xml:space="preserve">
-    <value>Mysql的</value>
+    <value>MySQL的</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>姓名</value>
