--- a/Installer_Src/Setup DreamWorld/My Project/Resources.zh-tw.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.zh-tw.resx
@@ -1879,7 +1879,7 @@
     <value>當我開始了，所以我在離開的MySQL的MySQL正在運行。</value>
   </data>
   <data name="Mysql_Word" xml:space="preserve">
-    <value>Mysql的</value>
+    <value>MySQL的</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>姓名</value>
