--- a/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
@@ -340,7 +340,7 @@
     <value>Zálohujte složku FSAssets</value>
   </data>
   <data name="Backup_Mysql" xml:space="preserve">
-    <value>Zálohujte Mysql datovou složku</value>
+    <value>Zálohujte MySQL datovou složku</value>
   </data>
   <data name="Backup_MySQL_Phrase" xml:space="preserve">
     <value>Zálohování složky MySql \ Data. Prosím, čekejte. Obrazovka bude vypadat zamrzlá.</value>
@@ -1894,7 +1894,7 @@
     <value>MySQL běžel, když jsem byl spuštěn, takže nechávám MySQL zapnutý.</value>
   </data>
   <data name="Mysql_Word" xml:space="preserve">
-    <value>Mysql</value>
+    <value>MySQL</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>název</value>
