--- a/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
@@ -340,7 +340,7 @@
     <value>φάκελο αντιγράφων ασφαλείας FSAssets</value>
   </data>
   <data name="Backup_Mysql" xml:space="preserve">
-    <value>Φάκελο αντιγράφων ασφαλείας Mysql Data</value>
+    <value>Φάκελο αντιγράφων ασφαλείας MySQL Data</value>
   </data>
   <data name="Backup_MySQL_Phrase" xml:space="preserve">
     <value>Δημιουργία αντιγράφων ασφαλείας MySql \ Data φακέλου. Παρακαλώ περιμένετε. Στην οθόνη θα εμφανιστεί κατεψυγμένα.</value>
@@ -1894,7 +1894,7 @@
     <value>MySQL έτρεχε όταν ξεκίνησε, έτσι φεύγω MySQL στο.</value>
   </data>
   <data name="Mysql_Word" xml:space="preserve">
-    <value>Mysql</value>
+    <value>MySQL</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>Ονομα</value>
