--- a/Installer_Src/Setup DreamWorld/My Project/Resources.en.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.en.resx
@@ -337,7 +337,7 @@
     <value>Backup FSAssets folder</value>
   </data>
   <data name="Backup_Mysql" xml:space="preserve">
-    <value>Backup Mysql Data folder</value>
+    <value>Backup MySQL Data folder</value>
   </data>
   <data name="Backup_MySQL_Phrase" xml:space="preserve">
     <value>Backing up MySql\Data Folder. Please Wait. Screen will appear frozen.</value>
@@ -1879,7 +1879,7 @@
     <value>MySQL was running when I was started, so I am leaving MySQL on.</value>
   </data>
   <data name="Mysql_Word" xml:space="preserve">
-    <value>Mysql</value>
+    <value>MySQL</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>Name</value>
