--- a/Installer_Src/Setup DreamWorld/My Project/Resources.es-ES.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.es-ES.resx
@@ -337,7 +337,7 @@
     <value>Carpeta de copia de seguridad de FSAssets</value>
   </data>
   <data name="Backup_Mysql" xml:space="preserve">
-    <value>Copia de seguridad de la carpeta de datos de Mysql</value>
+    <value>Copia de seguridad de la carpeta de datos de MySQL</value>
   </data>
   <data name="Backup_MySQL_Phrase" xml:space="preserve">
     <value>Copia de seguridad de MySql \ Carpeta de datos. Espere por favor. La pantalla aparecerá congelada.</value>
@@ -1879,7 +1879,7 @@
     <value>MySQL se estaba ejecutando cuando comencé, así que dejo MySQL activado.</value>
   </data>
   <data name="Mysql_Word" xml:space="preserve">
-    <value>Mysql</value>
+    <value>MySQL</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>Nombre</value>
