--- a/Installer_Src/Setup DreamWorld/My Project/Resources.eu.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.eu.resx
@@ -337,7 +337,7 @@
     <value>Backup FSAssets karpeta</value>
   </data>
   <data name="Backup_Mysql" xml:space="preserve">
-    <value>Backup Mysql Datu karpeta</value>
+    <value>Backup MySQL Datu karpeta</value>
   </data>
   <data name="Backup_MySQL_Phrase" xml:space="preserve">
     <value>MySql \ Datuen karpeta Babeskopiak. Itxaron mesedez. Pantaila izoztuak agertuko da.</value>
