--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fa-IR.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fa-IR.resx
@@ -337,7 +337,7 @@
     <value>از پوشه FSAssets پشتیبان تهیه کنید</value>
   </data>
   <data name="Backup_Mysql" xml:space="preserve">
-    <value>از پوشه Mysql Data پشتیبان تهیه کنید</value>
+    <value>از پوشه MySQL Data پشتیبان تهیه کنید</value>
   </data>
   <data name="Backup_MySQL_Phrase" xml:space="preserve">
     <value>پشتیبان گیری از پوشه MySql \ Data. لطفا صبر کنید. صفحه نمایش یخ زده به نظر می رسد.</value>
@@ -1879,7 +1879,7 @@
     <value>هنگام شروع کار MySQL در حال اجرا بود ، بنابراین من MySQL را روشن می کنم.</value>
   </data>
   <data name="Mysql_Word" xml:space="preserve">
-    <value>Mysql</value>
+    <value>MySQL</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>نام</value>
