--- a/Installer_Src/Setup DreamWorld/My Project/Resources.it.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.it.resx
@@ -337,7 +337,7 @@
     <value>Cartella FSAssets di backup</value>
   </data>
   <data name="Backup_Mysql" xml:space="preserve">
-    <value>Backup della cartella dati Mysql</value>
+    <value>Backup della cartella dati MySQL</value>
   </data>
   <data name="Backup_MySQL_Phrase" xml:space="preserve">
     <value>Backup di MySql \ Data Folder. Attendere prego. Lo schermo apparirà bloccato.</value>
@@ -1879,7 +1879,7 @@
     <value>MySQL era in esecuzione quando ho iniziato, quindi lascio attivo MySQL.</value>
   </data>
   <data name="Mysql_Word" xml:space="preserve">
-    <value>Mysql</value>
+    <value>MySQL</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>Nome</value>
