--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ru.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ru.resx
@@ -337,7 +337,7 @@
     <value>Папка резервного копирования FSAssets</value>
   </data>
   <data name="Backup_Mysql" xml:space="preserve">
-    <value>Резервное копирование папки Mysql данных</value>
+    <value>Резервное копирование папки MySQL данных</value>
   </data>
   <data name="Backup_MySQL_Phrase" xml:space="preserve">
     <value>Резервное копирование MySql \ Data Folder. Пожалуйста, подождите. Экран будет отображаться в замороженном виде.</value>
@@ -1879,7 +1879,7 @@
     <value>MySQL был запущен, когда я начал, так что я уезжаю MySQL на.</value>
   </data>
   <data name="Mysql_Word" xml:space="preserve">
-    <value>Mysql</value>
+    <value>MySQL</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>Имя</value>
