--- a/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
@@ -337,7 +337,7 @@
     <value>Backup FSAssets mapp</value>
   </data>
   <data name="Backup_Mysql" xml:space="preserve">
-    <value>Backup Mysql Data mapp</value>
+    <value>Backup MySQL Data mapp</value>
   </data>
   <data name="Backup_MySQL_Phrase" xml:space="preserve">
     <value>Säkerhetskopiera MySql \ Data mapp. Vänta. Skärm visas fryst.</value>
