--- a/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
@@ -337,7 +337,7 @@
     <value>Yedek FSAssets klasörü</value>
   </data>
   <data name="Backup_Mysql" xml:space="preserve">
-    <value>Yedekleme Mysql Veri klasörü</value>
+    <value>Yedekleme MySQL Veri klasörü</value>
   </data>
   <data name="Backup_MySQL_Phrase" xml:space="preserve">
     <value>MySql \ Data Klasörünü Yedekleme. Lütfen bekleyin. Ekran donmuş görünecektir.</value>
@@ -1879,7 +1879,7 @@
     <value>MySQL başladığımda çalışıyordu, bu yüzden MySQL'i açık bırakıyorum.</value>
   </data>
   <data name="Mysql_Word" xml:space="preserve">
-    <value>Mysql</value>
+    <value>MySQL</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>İsim</value>
