--- a/Installer_Src/Setup DreamWorld/My Project/Resources.es-MX.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.es-MX.resx
@@ -3360,4 +3360,28 @@
   <data name="_0" xml:space="preserve">
     <value>0</value>
   </data>
+  <data name="AreYouSure" xml:space="preserve">
+    <value>¿Apagar la red?</value>
+  </data>
+  <data name="Benchmark" xml:space="preserve">
+    <value>Punto de referencia</value>
+  </data>
+  <data name="Boot_Time" xml:space="preserve">
+    <value>Tiempo de arranque</value>
+  </data>
+  <data name="Map_Time" xml:space="preserve">
+    <value>Mapa Boot TIme</value>
+  </data>
+  <data name="Setup_Perl" xml:space="preserve">
+    <value>Configurar el idioma Perl</value>
+  </data>
+  <data name="String1" xml:space="preserve">
+    <value>Tiempo de arranque</value>
+  </data>
+  <data name="UpdateNow" xml:space="preserve">
+    <value>Actualiza ahora</value>
+  </data>
+  <data name="ViewVisitorMaps" xml:space="preserve">
+    <value>Ver mapas de visitantes</value>
+  </data>
 </root>
