--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3927,4 +3927,7 @@
   <data name="xls-icon-3398" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\xls-icon-3398.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Default_Not_SS" xml:space="preserve">
+    <value>The default region cannot be enabled as Smart Start.</value>
+  </data>
 </root>
