--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3930,4 +3930,10 @@
   <data name="Default_Not_SS" xml:space="preserve">
     <value>The default region cannot be enabled as Smart Start.</value>
   </data>
+  <data name="Open_word" xml:space="preserve">
+    <value>Open</value>
+  </data>
+  <data name="Saved_Word" xml:space="preserve">
+    <value>Saved</value>
+  </data>
 </root>
