--- a/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
@@ -3387,4 +3387,31 @@
   <data name="String1" xml:space="preserve">
     <value>Doba potřebná ke spuštění</value>
   </data>
+  <data name="Export_word" xml:space="preserve">
+    <value>Vývoz</value>
+  </data>
+  <data name="ShowDateTime" xml:space="preserve">
+    <value>Zobrazit datum a čas v protokolech</value>
+  </data>
+  <data name="Export_list" xml:space="preserve">
+    <value>Exportovat tento seznam</value>
+  </data>
+  <data name="Choose_folder" xml:space="preserve">
+    <value>Vybrat složku</value>
+  </data>
+  <data name="CoordX" xml:space="preserve">
+    <value>Pozice Východ-Západ na mapě světa</value>
+  </data>
+  <data name="MustSetSS" xml:space="preserve">
+    <value>Musí nastavit majitele Sim Surrounds jako první!</value>
+  </data>
+  <data name="Default_Not_SS" xml:space="preserve">
+    <value>Výchozí oblast nelze povolit jako Inteligentní spuštění.</value>
+  </data>
+  <data name="Open_word" xml:space="preserve">
+    <value>Otevřený</value>
+  </data>
+  <data name="Saved_Word" xml:space="preserve">
+    <value>Uložený</value>
+  </data>
 </root>
