--- a/Installer_Src/Setup DreamWorld/My Project/Resources.de.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.de.resx
@@ -3387,4 +3387,31 @@
   <data name="String1" xml:space="preserve">
     <value>Bootzeit</value>
   </data>
+  <data name="Export_word" xml:space="preserve">
+    <value>Exportieren</value>
+  </data>
+  <data name="ShowDateTime" xml:space="preserve">
+    <value>Datum und Uhrzeit in Protokollen anzeigen</value>
+  </data>
+  <data name="Export_list" xml:space="preserve">
+    <value>Diese Liste exportieren</value>
+  </data>
+  <data name="Choose_folder" xml:space="preserve">
+    <value>Ordner auswählen</value>
+  </data>
+  <data name="CoordX" xml:space="preserve">
+    <value>Die Ost-West-Lage auf der Weltkarte</value>
+  </data>
+  <data name="MustSetSS" xml:space="preserve">
+    <value>Muss zuerst den Besitzer der Sim Surrounds einstellen!</value>
+  </data>
+  <data name="Default_Not_SS" xml:space="preserve">
+    <value>Der Standardbereich kann nicht als Smart Start aktiviert werden.</value>
+  </data>
+  <data name="Open_word" xml:space="preserve">
+    <value>Offen</value>
+  </data>
+  <data name="Saved_Word" xml:space="preserve">
+    <value>Gespeichert</value>
+  </data>
 </root>
