--- a/Installer_Src/Setup DreamWorld/My Project/Resources.de.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.de.resx
@@ -756,7 +756,7 @@
   <data name="Content_word" xml:space="preserve">
     <value>Inhalt</value>
   </data>
-  <data name="Coordx" xml:space="preserve">
+  <data name="CoordX" xml:space="preserve">
     <value>Die Ost-West-Position auf der Weltkarte</value>
   </data>
   <data name="CoordY" xml:space="preserve">
