--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fa-IR.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fa-IR.resx
@@ -747,7 +747,7 @@
   <data name="Content_word" xml:space="preserve">
     <value>محتوا</value>
   </data>
-  <data name="Coordx" xml:space="preserve">
+  <data name="CoordX" xml:space="preserve">
     <value>موقعیت شرق و غرب در نقشه جهان</value>
   </data>
   <data name="CoordY" xml:space="preserve">
