--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
@@ -747,7 +747,7 @@
   <data name="Content_word" xml:space="preserve">
     <value>Teneur</value>
   </data>
-  <data name="Coordx" xml:space="preserve">
+  <data name="CoordX" xml:space="preserve">
     <value>La position est-ouest sur la carte du monde</value>
   </data>
   <data name="CoordY" xml:space="preserve">
