--- a/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
@@ -747,7 +747,7 @@
   <data name="Content_word" xml:space="preserve">
     <value>efni</value>
   </data>
-  <data name="Coordx" xml:space="preserve">
+  <data name="CoordX" xml:space="preserve">
     <value>The East-West staða á heimskortinu</value>
   </data>
   <data name="CoordY" xml:space="preserve">
