--- a/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
@@ -747,7 +747,7 @@
   <data name="Content_word" xml:space="preserve">
     <value>İçerik</value>
   </data>
-  <data name="Coordx" xml:space="preserve">
+  <data name="CoordX" xml:space="preserve">
     <value>Dünya haritasında Doğu-Batı konumu</value>
   </data>
   <data name="CoordY" xml:space="preserve">
